--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="shortcut icon" href="images/proximaai-icon-dex.png" type="image/x-icon">
         <link rel="icon" href="images/proximaai-icon-dex.png" type="image/x-icon">
         <link rel="shortcut icon" href="images/proximaai-icon-dex.png" type="image/x-icon">
-        <title>NEBULA AI | $NEBAI</title>
+        <title>NEURO AI | $NEBAI</title>
 
         <!--Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com/">
@@ -40,7 +40,7 @@
                 </span>
             </button>
             <a href="#">
-                <img src="images/Asset%20342.png" width="240px" class="img-fluid" alt="logo">
+                <img src="/website/NEBAI/images/photo_2025-01-16_13-13-05-Photoroom.png" width="240px" class="img-fluid" alt="logo">
             </a>
             <nav class="header-nav-middle">
                 <div class="main-nav navbar navbar-expand-xl navbar-light navbar-sticky">
@@ -56,17 +56,17 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="https://x.com/NebulaAiSolana">TWITTER</a>
+                                    <a class="nav-link" href="https://x.com/NeuroAlSol">TWITTER</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="https://pump.fun/E1rWMJ7zLsbfg419Xya9rjRkBZTSPGRyY5mURpGKpump">PUMPFUN</a>
+                                    <a class="nav-link" href="https://pump.fun/coin/97qom5DkcNAjb2b9THBWniqaJLasbPWhQiDfv4eBpump">PUMPFUN</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </nav>
-            <a data-cursor="pointer" href="https://pump.fun/E1rWMJ7zLsbfg419Xya9rjRkBZTSPGRyY5mURpGKpump" class="btn btn-theme d-sm-inline-block d-none"><span>Buy Now</span></a>
+            <a data-cursor="pointer" href="https://pump.fun/coin/97qom5DkcNAjb2b9THBWniqaJLasbPWhQiDfv4eBpump" class="btn btn-theme d-sm-inline-block d-none"><span>Buy Now</span></a>
         </header>
         <!-- header end -->
 
@@ -89,8 +89,8 @@
                                     <div class="title-effect"><img src="images/title-effect.png" alt=""><span>Evolve</span></div>
                                     with You
                                 </h1>
-                                <p>At NEBULA AI, we’re not just building agents; we’re crafting dynamic, intelligent assistants that understand, learn, and adapt in real time. Powered by cutting-edge artificial intelligence, our agents offer seamless, personalized interactions that are as intuitive as talking to a trusted colleague—without the wait, without the hassle.</p>
-                                <a data-cursor="pointer" href="https://pump.fun/E1rWMJ7zLsbfg419Xya9rjRkBZTSPGRyY5mURpGKpump" class="btn btn-theme d-sm-inline-block d-none" style="background-color: #3bedb2"><span style="color: #121212; font-size: 24px; font-weight: 600">Buy Now</span></a>
+                                <p>At NEURO AI, we’re not just building agents; we’re crafting dynamic, intelligent assistants that understand, learn, and adapt in real time. Powered by cutting-edge artificial intelligence, our agents offer seamless, personalized interactions that are as intuitive as talking to a trusted colleague—without the wait, without the hassle.</p>
+                                <a data-cursor="pointer" href="https://pump.fun/coin/97qom5DkcNAjb2b9THBWniqaJLasbPWhQiDfv4eBpump" class="btn btn-theme d-sm-inline-block d-none" style="background-color: #3bedb2"><span style="color: #121212; font-size: 24px; font-weight: 600">Buy Now</span></a>
                                 
                                 <script>
     // Function to copy the anchor text
@@ -120,7 +120,7 @@
 <!-- Your original anchor with the classes and styles restored -->
 <div>
     <a data-cursor="pointer" iclass="copy-link" id="copyLink" onclick="copyLinkData(event)" href="#" class="btn btn-theme d-sm-inline-block d-none" style="color: #3bedb2; margin-top: 20px; font-size: 18px">
-        <span>E1rWMJ7zLsbfg419Xya9rjRkBZTSPGRyY5mURpGKpump</span>
+        <span>97qom5DkcNAjb2b9THBWniqaJLasbPWhQiDfv4eBpump</span>
     </a>
     <div id="copiedMsg" class="copied-msg">Copied!</div>
 </div>
@@ -173,7 +173,7 @@
                                 <div class="title">
                                     <h2>Empowering Conversations, Redefining Intelligence</h2>
                                 </div>
-                                <p style="font-size: 20px">NEBULA AI delivers intelligent, real-time responses using advanced AI and natural language processing, making every interaction seamless and efficient.</p>
+                                <p style="font-size: 20px">NEURO AI delivers intelligent, real-time responses using advanced AI and natural language processing, making every interaction seamless and efficient.</p>
                                 <ul>
                                     <li><img src="images/tick.svg" class="img-fluid" alt="tick">Real-Time Intelligence: Instant, context-aware responses.</li>
                                     <li><img src="images/tick.svg" class="img-fluid" alt="tick">Adaptive Learning: Continuously improves with every interaction.</li>
@@ -451,17 +451,17 @@
                 <div class="accordion" id="accordionPanelsStayOpenExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                            <button data-cursor="pointer" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">What is NEBULA AI?</button>
+                            <button data-cursor="pointer" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">What is NEURO AI?</button>
                         </h2>
                         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
                             <div class="accordion-body">
-                                <p>NEBULA AI is an intelligent agent platform designed to deliver real-time, context-aware, and adaptive interactions using advanced AI technology.</p>
+                                <p>NEURO AI is an intelligent agent platform designed to deliver real-time, context-aware, and adaptive interactions using advanced AI technology.</p>
                             </div>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-                            <button data-cursor="pointer" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">How does NEBULA AI integrate with existing systems?</button>
+                            <button data-cursor="pointer" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">How does NEURO AI integrate with existing systems?</button>
                         </h2>
                         <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
                             <div class="accordion-body">Our platform seamlessly integrates with your current tools and workflows, ensuring minimal disruption and maximum efficiency.</div>
@@ -469,7 +469,7 @@
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-                            <button data-cursor="pointer" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">Can NEBULA AI handle multiple languages?</button>
+                            <button data-cursor="pointer" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">Can NEURO AI handle multiple languages?</button>
                         </h2>
                         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
                             <div class="accordion-body">Our platform seamlessly integrates with your current tools and workflows, ensuring minimal disruption and maximum efficiency.</div>
@@ -477,7 +477,7 @@
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingFour">
-                            <button data-cursor="pointer" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">Is my data secure with NEBULA AI?</button>
+                            <button data-cursor="pointer" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">Is my data secure with NEURO AI?</button>
                         </h2>
                         <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
                             <div class="accordion-body">Absolutely. We use enterprise-grade security protocols to ensure your data remains safe and protected.</div>
@@ -485,18 +485,18 @@
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingFive">
-                            <button data-cursor="pointer" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">Does NEBULA AI improve over time?</button>
+                            <button data-cursor="pointer" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">Does NEURO AI improve over time?</button>
                         </h2>
                         <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFive">
-                            <div class="accordion-body">Yes, NEBULA AI continuously learns from interactions to deliver smarter and more refined responses.</div>
+                            <div class="accordion-body">Yes, NEURO AI continuously learns from interactions to deliver smarter and more refined responses.</div>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingSix">
-                            <button data-cursor="pointer" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSix" aria-expanded="false" aria-controls="panelsStayOpen-collapseSix">What industries can benefit from NEBULA AI?</button>
+                            <button data-cursor="pointer" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSix" aria-expanded="false" aria-controls="panelsStayOpen-collapseSix">What industries can benefit from NEURO AI?</button>
                         </h2>
                         <div id="panelsStayOpen-collapseSix" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingSix">
-                            <div class="accordion-body">NEBULA AI is versatile and can enhance interactions across industries like customer service, sales, and operations.</div>
+                            <div class="accordion-body">NEURO AI is versatile and can enhance interactions across industries like customer service, sales, and operations.</div>
                         </div>
                     </div>
                 </div>
@@ -513,9 +513,9 @@
                         <img src="images/hand.svg" class="img-fluid right-hand" alt="hand">
                     </div>
                     <h2>
-                        Ready to Elevate with <span>NEBULA AI? <img src="images/title-effect.svg" class="img-fluid" alt="title-effect"></span>
+                        Ready to Elevate with <span>NEURO AI? <img src="images/title-effect.svg" class="img-fluid" alt="title-effect"></span>
                     </h2>
-                    <p>Unlock the power of next-level intelligent agents and experience seamless, context-aware interactions that redefine productivity. With NEBULA AI, the future isn’t just coming—it’s already here.</p>
+                    <p>Unlock the power of next-level intelligent agents and experience seamless, context-aware interactions that redefine productivity. With NEURO AI, the future isn’t just coming—it’s already here.</p>
                     <ul>
                         <li><img src="images/tick.svg" class="img-fluid" alt="tick">Instant, Smart Response</li>
                         <li><img src="images/tick.svg" class="img-fluid" alt="tick">Adaptive Intelligence</li>
@@ -524,7 +524,7 @@
                     </ul>
                     <a data-cursor="pointer" class="btn-arrow" href="#">
                         <div class="icon-arrow"><i class="iconsax" data-icon="arrow-up"></i></div>
-                        Get Started with NEBULA AI Today!
+                        Get Started with NEURO AI Today!
                     </a>
                 </div>
             </div>
@@ -536,7 +536,7 @@
             <div class="container">
                 <div class="footer-row">
                     <div class="footer-main">
-                        <a href="#" class="footer-logo"><img src="images/Asset%20342.png" class="img-fluid" alt=""></a>
+                        <a href="#" class="footer-logo"><img src="/website/NEBAI/images/photo_2025-01-16_13-13-05-Photoroom.png" class="img-fluid" alt=""></a>
                         <!-- <h3>SUBSCRIBE TO OUR NEWSLETTER</h3>
                         <form>
                             <div class="input-group">
@@ -546,14 +546,14 @@
                         </form> -->
                         <ul class="social-links">
                             <li>
-                                <a data-cursor="pointer" href="https://x.com/NebulaAiSolana"><img src="images/Asset%20353.png" class="img-fluid" alt=""></a>
+                                <a data-cursor="pointer" href="https://x.com/NeuroAlSol"><img src="images/Asset%20353.png" class="img-fluid" alt=""></a>
                             </li>
                             <li>
-                                <a data-cursor="pointer" href="https://pump.fun/coin/E1rWMJ7zLsbfg419Xya9rjRkBZTSPGRyY5mURpGKpump"><img src="images/Asset%20354.png" class="img-fluid" alt=""></a>
+                                <a data-cursor="pointer" href="https://pump.fun/coin/97qom5DkcNAjb2b9THBWniqaJLasbPWhQiDfv4eBpump"><img src="images/Asset%20354.png" class="img-fluid" alt=""></a>
                             </li>
 
                             <li>
-                                <a data-cursor="pointer" href="https://t.me/NebulaAiSolana"><img src="images/Asset%20356.png" class="img-fluid" alt=""></a>
+                                <a data-cursor="pointer" href="https://t.me/NeuroAlSol"><img src="images/Asset%20356.png" class="img-fluid" alt=""></a>
                             </li>
                         </ul>
                     </div>
@@ -565,15 +565,15 @@
                         <div class="footer-content">
                             <ul>
                                 <li><a data-cursor="pointer" href="#">Home</a></li>
-                                <li><a data-cursor="pointer" href="https://x.com/NebulaAiSolana">TWITTER</a></li>
-                                <li><a data-cursor="pointer" href="https://pump.fun/E1rWMJ7zLsbfg419Xya9rjRkBZTSPGRyY5mURpGKpump">PUMPFUN</a></li>
+                                <li><a data-cursor="pointer" href="https://x.com/NeuroAlSol">TWITTER</a></li>
+                                <li><a data-cursor="pointer" href="https://pump.fun/coin/97qom5DkcNAjb2b9THBWniqaJLasbPWhQiDfv4eBpump">PUMPFUN</a></li>
                             </ul>
                         </div>
                     </div>
 
                 </div>
                 <div class="footer-copyright">
-                    <h4>@2025 NEBULA AI. All the Copyright Reserved.</h4>
+                    <h4>@2025 NEURO AI. All the Copyright Reserved.</h4>
                     <ul class="footer-links">
                         <li><a href="#">Privacy Policy </a></li>
                         <li><a href="#">Terms & Condition </a></li>
