--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </span>
             </button>
             <a href="#">
-                <img src="/website/NEBAI/images/photo_2025-01-16_13-13-05-Photoroom.png" width="240px" class="img-fluid" alt="logo">
+                <img src="./images/photo_2025-01-16_13-13-05-Photoroom.png" width="240px" class="img-fluid" alt="logo">
             </a>
             <nav class="header-nav-middle">
                 <div class="main-nav navbar navbar-expand-xl navbar-light navbar-sticky">
@@ -536,7 +536,7 @@
             <div class="container">
                 <div class="footer-row">
                     <div class="footer-main">
-                        <a href="#" class="footer-logo"><img src="/website/NEBAI/images/photo_2025-01-16_13-13-05-Photoroom.png" class="img-fluid" alt=""></a>
+                        <a href="#" class="footer-logo"><img src="./images/photo_2025-01-16_13-13-05-Photoroom.png" class="img-fluid" alt=""></a>
                         <!-- <h3>SUBSCRIBE TO OUR NEWSLETTER</h3>
                         <form>
                             <div class="input-group">
