--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="shortcut icon" href="images/proximaai-icon-dex.png" type="image/x-icon">
         <link rel="icon" href="images/proximaai-icon-dex.png" type="image/x-icon">
         <link rel="shortcut icon" href="images/proximaai-icon-dex.png" type="image/x-icon">
-        <title>NEURO AI | $NEBAI</title>
+        <title>NEURO AI</title>
 
         <!--Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com/">
